  (Nicolás Ojeda Bär, review by Gabriel Scherer)

- #12267: Fix stack alignment computation
  (Miod Vallat, report by Jan Midtgaard, review by Gabriel Scherer)

- #12395, #12404: Fix thread-unsafety in the fallback implementation of
  `Unix.create_process` (the one used when `posix_spawnp` is unavailable)
  (Xavier Leroy, report by Chris Vine, review by Nicolás Ojeda Bär)


OCaml 5.1.0
---------------

### Restored backends

- #11418, #11708: RISC-V multicore support.
  (Nicolás Ojeda Bär, review by KC Sivaramakrishnan)

- #11712, #12258, #12261: s390x / IBM Z multicore support:
  OCaml & C stack separation; dynamic stack size checks; fiber and
  effects support.
  (Aleksei Nikiforov, with help from Vincent Laviron and Xavier Leroy,
   additional suggestions by Luc Maranget,
   review by the same and KC Sivaramakrishnan)

- #11642: Restore Cygwin port. Add GC messages for address space reservations
  when OCAMLRUNPARAM option v includes 0x1000.
  (David Allsopp, review by Xavier Leroy, Guillaume Munch-Maccagnoni
  and Gabriel Scherer)

### Standard library:

- #12006, #12064: Add `Marshal.Compression` flag to `Marshal.to_*` functions.
  When this flag is explicitly set, marshaled data is compressed using ZSTD.
  On some practical examples, the marshalled output became three times smaller
  at no noticeable cost on the marshalling time.
  (Xavier Leroy, review by Edwin Török and Gabriel Scherer, fix by Damien
   Doligez)

- #10464: Add List.is_empty.
  (Craig Ferguson, review by David Allsopp)

- #11848: Add `List.find_mapi`,
  `List.find_index: ('a -> bool) -> 'a list -> int option`,
  `Seq.find_mapi`, `Seq.find_index`, `Array.find_mapi`, `Array.find_index`,
  `Float.Array.find_opt`, `Float.Array.find_index`, `Float.Array.find_map`,
  `Float.Array.find_mapi`.
  (Sima Kinsart, review by Daniel Bünzli and Nicolás Ojeda Bär)

- #11410: Add Set.to_list, Map.to_list, Map.of_list,
  `Map.add_to_list: key -> 'a -> 'a list t -> 'a list t`.